add rmi and service layer for announcements